syntax="proto3";

package pricesrpc;

option go_package = "./pricesrpc";

service Prices {
        rpc GetPrice(GetPriceRequest) returns (GetPriceResponse) {}
}

message GetPriceRequest {
        string path = 1;
}

message GetPriceResponse {
        int64 price = 3;
}
